--- a/about.html
+++ b/about.html
@@ -42,7 +42,9 @@
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/responsive.css">
+
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>Airline Spotter - About.</title>
   </head>
