--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <body>
     <div class="container">
       <a href="https://www.youtube.com/user/CaptainEdo">
-        <video id="video-loop" loop="true" autoplay="true" preload="auto">
+        <video id="video-loop" loop="true" autoplay="true" preload="auto" poster="assets/GIF-AS.gif">
           <source src="assets/GIF-AS.mp4" type="video/mp4" />
         </video>
       </a>
