--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container container-index left-start">
       <a href="https://www.youtube.com/user/CaptainEdo">
         <video id="video-loop" loop="true" autoplay="true" preload="auto" poster="assets/GIF-AS.gif">
           <source src="assets/GIF-AS.mp4" type="video/mp4" />
         </video>
       </a>
-      <a class="bottom-btn" href="about.html">about.</a>
+      <p id="about" class="bottom-btn">about.</p>
     </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
