replace video by gif when small

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <video id="video-loop" loop="true" autoplay="true" preload="auto" poster="assets/GIF-AS.gif">
           <source src="assets/GIF-AS.mp4" type="video/mp4" />
         </video>
+        <img src="assets/GIF-AS.gif" alt="gif-as">
       </a>
       <p id="about" class="bottom-btn">about.</p>
     </div>
