--- a/about.html
+++ b/about.html
@@ -44,8 +44,8 @@
 
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/responsive.css">
+    <link rel="stylesheet" href="style/effect.css">
 
-    <!-- Use title if it's in the page YAML frontmatter -->
     <title>Airline Spotter - About.</title>
   </head>
 
@@ -69,10 +69,11 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </div>
-      <p id="index" class="bottom-btn">exit.</p>
+      <p id="index" class="bottom-btn link link--mallki">exit.<span data-letters="exit."></span><span data-letters="exit."></span></a>
     </div>
 
     <script type="text/javascript" src="main.js"></script>
+    <!-- <script type="text/javascript" src="effect.js"></script> -->
   </body>
 
 </html>
