--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
     <link rel="stylesheet" href="style/responsive.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/effect.css">
+
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>Airline Spotter - Welcome.</title>
   </head>
@@ -56,9 +58,10 @@
         </video>
         <img src="assets/GIF-AS.gif" alt="gif-as">
       </a>
-      <p id="about" class="bottom-btn">about.</p>
+      <p id="about" class="bottom-btn link link--mallki">about.<span data-letters="about."></span><span data-letters="about."></span></a>
     </div>
     <script type="text/javascript" src="main.js"></script>
+    <!-- <script type="text/javascript" src="effect.js"></script> -->
   </body>
 
 </html>
